feat: Implementacion de cancelacion de reservas via API y Swagger
